connect mongodb database

--- a/views/survey.ejs
+++ b/views/survey.ejs
@@ -51,15 +51,15 @@
             <section id="checkboxes">
                 <span>What would you like to see improved? <span>(Check all that apply)</span></span>
                 <div class="checkbox-div">
-                    <input type="checkbox" id="front" value="fornt-end-projects" name="f-end">
+                    <input type="checkbox" id="front" value="fornt-end-projects" name="front">
                     <label for="front">Front-end Projects</label>
                 </div>
                 <div class="checkbox-div">
-                    <input type="checkbox" id="back" value="back-end-projects" name="b-end">
+                    <input type="checkbox" id="back" value="back-end-projects" name="back">
                     <label for="back">Back-end Projects</label>
                 </div>
                 <div class="checkbox-div">
-                    <input type="checkbox" id="data-v" value="data-visualization" name="data-v">
+                    <input type="checkbox" id="data-v" value="data-visualization" name="datav">
                     <label for="data-v">Data Visualization</label>
                 </div>
                 <div class="checkbox-div">
@@ -99,7 +99,7 @@
                 <div> Any comments or suggestions?</div>
                 <textarea id="text-area" rows="8" cols="33" placeholder="Enter your comments here..."></textarea>
             </section>
-            <button id="submit">SUBMIT</button>
+            <button id="submit" type="submit" value="/">SUBMIT</button>
         </form>
     </main>
     <script src="app.js"></script>
